# openloom

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  loom_logo.py  memory.db  package-lock.json  package.json  peace_sign_ansi.py  profile.json  rebuild_tools.py  release_notes.md
backend/crates/loom-context/: Cargo.toml
backend/crates/loom-context/src/: compaction.rs  lib.rs  tokenizers.rs
backend/crates/loom-core/: Cargo.toml
backend/crates/loom-core/src/: agent.rs  agent_loop.rs  agent_pool.rs  builtin_tools.rs  context_probe.rs  entity_cron_tools.rs  entity_mcp_tools.rs  entity_skills_tools.rs  entity_tools.rs  event_bus.rs  hooks.rs  lib.rs  monitor_manager.rs  orchestrator.rs  plan_prompts.rs  process_manager.rs  slash_router.rs  slim.rs  team_orchestrator.rs  todo_context.rs  tool_context.rs  tool_registry.rs  vision.rs
backend/crates/loom-core/tests/: extreme.rs
backend/crates/loom-cron/: Cargo.toml
backend/crates/loom-cron/src/: detector.rs  job.rs  lib.rs  storage.rs
backend/crates/loom-import/: Cargo.toml
backend/crates/loom-import/src/: claude.rs  codex.rs  lib.rs  openclaw.rs
backend/crates/loom-import/tests/: build_test.rs  codex_test.rs  openclaw_test.rs  scan_test.rs
backend/crates/loom-inference/: Cargo.toml
backend/crates/loom-inference/src/: anthropic.rs  cache.rs  engine.rs  lib.rs  openai.rs
backend/crates/loom-memory/: Cargo.toml
backend/crates/loom-memory/src/: aggregator.rs  config_db.rs  consolidation.rs  extractor.rs  graph.rs  layers.rs  lib.rs  memory_db.rs  pattern.rs  persona.rs  pipeline.rs  session_db.rs  store.rs  summary.rs  todo_store.rs
backend/crates/loom-security/: Cargo.toml
backend/crates/loom-security/src/: lib.rs  sandbox.rs
backend/crates/loom-server/: Cargo.toml
backend/crates/loom-server/src/: credential.rs  dispatch.rs  lib.rs  routes.rs  ws.rs
backend/crates/loom-types/: Cargo.toml
backend/crates/loom-types/src/: event.rs  id.rs  import.rs  inference.rs  jsonrpc.rs  kg.rs  lib.rs  mcp.rs  memory.rs  message.rs  mode.rs  permission.rs  persona.rs  plan.rs  role.rs  router.rs  session.rs  tool.rs
backend/crates/lume-cli/: Cargo.toml
backend/crates/lume-cli/src/: main.rs  mcp_config.rs  memory.rs  plugins.rs
backend/crates/lume-lsp/: Cargo.toml
backend/crates/lume-lsp/src/: lib.rs
backend/crates/lume-marketplace/: Cargo.toml
backend/crates/lume-marketplace/src/: lib.rs
backend/crates/lume-mcp/: Cargo.toml
backend/crates/lume-mcp/src/: lib.rs
backend/crates/lume-skills/: Cargo.toml
backend/crates/lume-skills/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: chat_tui.rs  download.rs  main.rs
crates/cli/src/tui/: app.rs  commands.rs  input.rs  keymap.rs  mod.rs  render.rs  status.rs  streaming.rs  theme.rs
crates/engine/: Cargo.toml
crates/engine/src/: agent_loop.rs  checkpoint.rs  computer_use.rs  config.rs  cron_scheduler.rs  events.rs  heartbeat.rs  lib.rs  memory_thread.rs  persona_watcher.rs  plugin_fs.rs  rate_limiter.rs  secrets.rs  session.rs  shutdown.rs  skill_bundles.rs  skill_fs.rs  stream.rs  token_store.rs  uia_helper.ps1  vision.rs
crates/engine/src/bridge/: adapter.rs  feishu.rs  manager.rs  mod.rs  qq.rs  router.rs  security.rs  store.rs  telegram.rs  types.rs  wechat.rs
crates/engine/tests/: bridge_integration_test.rs  phase1_integration_tests.rs
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs
crates/loom-protocol/app-server-client/: Cargo.toml
crates/loom-protocol/app-server-client/src/: lib.rs  remote.rs
crates/loom-protocol/app-server-protocol/: Cargo.toml
crates/loom-protocol/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs
crates/loom-protocol/app-server-protocol/tests/: schema_fixtures.rs
crates/loom-protocol/chatgpt/: Cargo.toml
crates/loom-protocol/chatgpt/src/: apply_command.rs  chatgpt_client.rs  connectors.rs  get_task.rs  lib.rs  workspace_settings.rs
crates/loom-protocol/cli/: Cargo.toml
crates/loom-protocol/cli/src/: doctor.rs  exit_status.rs  lib.rs  main.rs  mcp_cmd.rs  plugin_cmd.rs  state_db_recovery.rs
crates/loom-protocol/config/: Cargo.toml
crates/loom-protocol/config/src/: config_requirements.rs  config_toml.rs  diagnostics.rs  fingerprint.rs  hook_config.rs  lib.rs  merge.rs  model_info.rs  permissions_toml.rs  plugin_edit.rs  profile_toml.rs  requirements_exec_policy.rs  schema.rs  skills_config.rs  state.rs  strict_config.rs  thread_config.rs  types.rs
crates/loom-protocol/core-plugins/: Cargo.toml
crates/loom-protocol/core-plugins/src/: installed_marketplaces.rs  installed_marketplaces.rs.bak  lib.rs  loader.rs  loader_tests.rs.bak  manager.rs  manager_tests.rs  manifest.rs  marketplace.rs  marketplace.rs.bak  marketplace_add.rs  marketplace_remove.rs  marketplace_tests.rs.bak  marketplace_upgrade.rs  marketplace_upgrade.rs.bak  remote.rs  remote.rs.bak  remote_bundle.rs  remote_bundle.rs.bak  remote_legacy.rs  startup_remote_sync.rs.bak  startup_remote_sync_tests.rs.bak  startup_sync.rs.bak  store.rs  store.rs.bak  store_tests.rs.bak  test_support.rs
crates/loom-protocol/core-skills/: Cargo.toml
crates/loom-protocol/core-skills/src/: config_rules.rs  injection.rs  injection.rs.bak  injection_tests.rs  invocation_utils.rs.bak  invocation_utils_tests.rs  lib.rs  loader.rs  loader_tests.rs  loader_tests.rs.bak  manager.rs  manager_tests.rs  manager_tests.rs.bak  mention_counts.rs.bak  model.rs  remote.rs.bak  render.rs  system.rs.bak
crates/loom-protocol/exec/: Cargo.toml
crates/loom-protocol/exec-server/: Cargo.toml
crates/memory/: Cargo.toml
crates/memory/src/: aggregator.rs  event.rs  extractor.rs  lib.rs  persona.rs  pipeline.rs  store.rs
crates/memory/tests/: memory_pipeline_tests.rs
crates/server/: Cargo.toml
crates/server/src/: avatar.rs  blob.rs  dispatch.rs  jsonrpc.rs  lib.rs  main.rs  proxy.rs  sse.rs  ws.rs
crates/skills/: Cargo.toml
crates/skills/src/: cron_store.rs  external.rs  lib.rs  loom_context.rs  plugin_loader.rs  settings_registry.rs
crates/skills/tests/: test_plugins.rs
docs/: TODO.md  (+16 more)
(+1335 files in other folders)
