[workspace]
resolver = "2"
members = [
    "crates/*",
    "crates/loom-utils/absolute-path",
    "crates/loom-utils/ansi-escape",
    "crates/loom-utils/approval-presets",
    "crates/loom-utils/async-utils",
    "crates/loom-utils/cache",
    "crates/loom-utils/cli",
    "crates/loom-utils/elapsed",
    "crates/loom-utils/file-search",
    "crates/loom-utils/file-system",
    "crates/loom-utils/fuzzy-match",
    "crates/loom-utils/git-utils",
    "crates/loom-utils/home-dir",
    "crates/loom-utils/image",
    "crates/loom-utils/install-context",
    "crates/loom-utils/path",
    "crates/loom-utils/rustls-provider",
    "crates/loom-utils/sleep-inhibitor",
    "crates/loom-utils/string",
    "crates/loom-utils/terminal-detection",
    "crates/loom-utils/uds",
    "crates/loom-protocol/execpolicy",
    "crates/loom-protocol/network-proxy",
    "crates/loom-protocol/protocol",
    "crates/loom-protocol/sandboxing",
    "crates/loom-protocol/shell-command",
    "crates/loom-protocol/skills",
    "crates/loom-protocol/app-server-protocol",
    "crates/loom-utils/otel-stub",
    "crates/loom-protocol/features",
    "crates/loom-utils/shim-stubs",
    "crates/loom-utils/tui-stubs",
    "crates/loom-utils/plugins",
    # "crates/loom-utils/sandbox-summary",
    # "crates/loom-utils/oss",
    "crates/loom-utils/arg0",
    "crates/loom-utils/oss",
    "crates/loom-utils/sandbox-summary",
    "crates/loom-protocol/exec-server",
    "crates/loom-protocol/core-plugins",
    "crates/loom-protocol/core-skills",
    "crates/loom-protocol/tools",
    "crates/loom-protocol/hooks",
    "crates/loom-protocol/external-agent-migration",
    "crates/loom-protocol/external-agent-sessions",
    "crates/loom-protocol/config",
    "crates/loom-protocol/app-server-client",
    "crates/loom-protocol/mcp",
    "crates/loom-protocol/rmcp-client",
    "crates/loom-protocol/chatgpt",
    "crates/loom-protocol/tui",
    "crates/loom-protocol/cli",
    "backend/crates/*",
]
exclude = [
    "crates/loom-utils",
    "crates/loom-protocol",
]

[workspace.package]
version = "0.2.15"
edition = "2024"
license = "Apache-2.0"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[workspace.dependencies]
# External dependencies needed by ported Codex crates.
# Versions sourced from F:/codex/codex-rs/Cargo.toml [workspace.dependencies].

async-channel = "2.3.1"
chardetng = "0.1.17"
allocative = "=0.3.4"
encoding_rs = "0.8.35"
globset = "0.4"
wildmatch = "2.6.1"
rmcp = { version = "0.15.0", default-features = false }
inventory = "0.3"
schemars = "0.8.22"
ts-rs = "11"
strum = "0.27.2"
strum_macros = "0.28.0"
diffy = "0.4.2"
pulldown-cmark = "0.10"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
arboard = { version = "3", features = ["wayland-data-control"] }
crossterm = "0.28.1"
owo-colors = "4.3.0"
supports-color = "3.0.2"
dirs = "6"
dunce = "1.0.4"
pathdiff = "0.2"
itertools = "0.14.0"
lazy_static = "1"
landlock = "0.4.4"
lru = "0.16.3"
derive_more = "2"
shlex = "1.3.0"
textwrap = "0.16.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
color-eyre = "0.6.3"
base64 = "0.22.1"
chrono = "0.4.43"
sha2 = "0.10"
sha1 = "0.10.6"
rand = "0.9"
image = { version = "^0.25.9", default-features = false }
indexmap = "2.12.0"
multimap = "0.10.0"
serde_ignored = "0.1.14"
serde_path_to_error = "0.1.20"
gethostname = "1.1.0"
include_dir = "0.7.4"
regex-lite = "0.1.8"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
webbrowser = "1.0"
url = "2"
urlencoding = "2.1"
futures = { version = "0.3", default-features = false }
syntect = "5"
sys-locale = "0.3.2"
starlark = "0.13.0"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
arc-swap = "1.9.0"
bytes = "1.10.1"
prost = "0.14.3"
uuid = { version = "1", features = ["v4"] }
libc = "0.2.182"
which = "8"
wiremock = "0.6.5"
flate2 = "1.1.8"
oauth2 = "5"
keyring = { version = "3.6", default-features = false }
sse-stream = "0.2.1"
seccompiler = "0.5.0"
semver = "1.0"
tar = { version = "=0.4.45", default-features = false }
zip = "2.4.2"
serde_yaml = "0.9"
serial_test = "3.2.0"
serde_with = "3.17"
jsonptr = { version = "0.7.1", default-features = false }
crossbeam-channel = "0.5.15"
ctor = "0.4.4"
ignore = "0.4.23"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
gix = { version = "0.81.0", default-features = false, features = ["sha1"] }
similar = "2.7.0"
walkdir = "2.5.0"
time = "0.3.47"
toml = "0.9.5"
mime_guess = "2.0.5"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
rama-core = "=0.3.0-alpha.4"
rama-http = "=0.3.0-alpha.4"
rama-http-backend = { version = "=0.3.0-alpha.4", features = ["tls"] }
rama-net = { version = "=0.3.0-alpha.4", features = ["http", "tls"] }
rama-socks5 = "=0.3.0-alpha.4"
rama-tcp = { version = "=0.3.0-alpha.4", features = ["http"] }
rama-tls-rustls = { version = "=0.3.0-alpha.4", features = ["http"] }

# Additional external deps needed by Level 0 utility crates
ansi-to-tui = "7.0.0"
async-io = "2.6.0"
dotenvy = "0.15.7"
pretty_assertions = "1.4.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.14.0"
uds_windows = "1.1.0"

# Level 0 utility crate path entries (for workspace = true references)
loom-absolute-path = { path = "crates/loom-utils/absolute-path" }
loom-home-dir = { path = "crates/loom-utils/home-dir" }

# Level 1-2 crate path entries (for workspace = true references)
loom-approval-presets = { path = "crates/loom-utils/approval-presets" }
loom-arg0 = { path = "crates/loom-utils/arg0" }
loom-cache = { path = "crates/loom-utils/cache" }
loom-execpolicy = { path = "crates/loom-protocol/execpolicy" }
loom-exec = { path = "crates/loom-protocol/exec" }
loom-network-proxy = { path = "crates/loom-protocol/network-proxy" }
loom-protocol = { path = "crates/loom-protocol/protocol" }
loom-sandbox-summary = { path = "crates/loom-utils/sandbox-summary" }
loom-shell-command = { path = "crates/loom-protocol/shell-command" }
loom-app-server-protocol = { path = "crates/loom-protocol/app-server-protocol" }
loom-app-server-client = { path = "crates/loom-protocol/app-server-client" }
loom-features = { path = "crates/loom-protocol/features" }
loom-otel-stub = { path = "crates/loom-utils/otel-stub" }
loom-shim-stubs = { path = "crates/loom-utils/shim-stubs" }
loom-tui-stubs = { path = "crates/loom-utils/tui-stubs" }
loom-sandboxing = { path = "crates/loom-protocol/sandboxing" }
loom-exec-server = { path = "crates/loom-protocol/exec-server" }
loom-skills = { path = "crates/loom-protocol/skills" }
loom-core-plugins = { path = "crates/loom-protocol/core-plugins" }
loom-core-skills = { path = "crates/loom-protocol/core-skills" }
loom-tools = { path = "crates/loom-protocol/tools" }
loom-hooks = { path = "crates/loom-protocol/hooks" }
loom-external-agent-sessions = { path = "crates/loom-protocol/external-agent-sessions" }
loom-external-agent-migration = { path = "crates/loom-protocol/external-agent-migration" }
loom-file-system = { path = "crates/loom-utils/file-system" }
loom-file-search = { path = "crates/loom-utils/file-search" }
loom-git-utils = { path = "crates/loom-utils/git-utils" }
loom-sleep-inhibitor = { path = "crates/loom-utils/sleep-inhibitor" }
loom-oss = { path = "crates/loom-utils/oss" }
loom-plugins = { path = "crates/loom-utils/plugins" }
loom-cli-utils = { path = "crates/loom-utils/cli" }
loom-image = { path = "crates/loom-utils/image" }

# Level 0 deps that need explicit path entries (others use crate name convention)
loom-ansi-escape = { path = "crates/loom-utils/ansi-escape" }
loom-async-utils = { path = "crates/loom-utils/async-utils" }
loom-elapsed = { path = "crates/loom-utils/elapsed" }
loom-fuzzy-match = { path = "crates/loom-utils/fuzzy-match" }
loom-rustls-provider = { path = "crates/loom-utils/rustls-provider" }
loom-string = { path = "crates/loom-utils/string" }
loom-terminal-detection = { path = "crates/loom-utils/terminal-detection" }
loom-uds = { path = "crates/loom-utils/uds" }
loom-path-utils = { path = "crates/loom-utils/path" }
loom-config = { path = "crates/loom-protocol/config" }
loom-mcp = { path = "crates/loom-protocol/mcp" }
loom-rmcp-client = { path = "crates/loom-protocol/rmcp-client" }
loom-chatgpt = { path = "crates/loom-protocol/chatgpt" }
loom-tui = { path = "crates/loom-protocol/tui" }
loom-cli = { path = "crates/loom-protocol/cli" }
loom-install-context = { path = "crates/loom-utils/install-context" }

# Commonly used deps (already used by openLoom, centralized here)
anyhow = "1"
async-trait = "0.1.89"
clap = "4"
clap_complete = "4"
http = "1.3.1"
axum = "0.7"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
once_cell = "1.20.2"
quick-xml = "0.38.4"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["cookies"] }
serde = "1"
serde_json = "1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tiny_http = "0.12"
tokio = "1"
tonic = { version = "0.14.3", default-features = false, features = ["channel", "codegen"] }
tonic-prost = "0.14.3"
toml_edit = "0.24.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
dns-lookup = "3.0.1"
winapi-util = "0.1.11"
winsplit = "0.1"
tracing-appender = "0.2"
vt100 = "0.16"
assert_matches = "1.5"
insta = "1.42"

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", rev = "87db8bfa6dc99427fd3b071681b07fc31c6ce995" }
ratatui = { git = "https://github.com/nornagon/ratatui", rev = "9b2ad1298408c45918ee9f8241a6f95498cdbed2" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
