[workspace]
resolver = "2"
members = [
    "backend/crates/*",
]

[workspace.package]
version = "0.4.26"
edition = "2024"
license = "Apache-2.0"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[workspace.dependencies]
# Only the dependencies actually referenced by member crates via `workspace = true`.
# The previous large list was copied in for Codex-port crates that were never
# ported; it was removed to keep this manifest reflective of reality. Re-add an
# entry here (and reference it with `<dep>.workspace = true`) if such a port lands.
base64 = "0.22.1"
futures = { version = "0.3", default-features = false }
keyring = { version = "3.6", default-features = false }
regex = "1.12.3"
reqwest = { version = "0.12", features = ["cookies"] }
sha2 = "0.10"
tokio-util = "0.7.18"
toml = "0.9.5"
