[package]
name = "openloom"
version.workspace = true
edition.workspace = true

[[bin]]
name = "openloom"
path = "src/main.rs"

[dependencies]
openloom-memory = { path = "../memory" }
openloom-models = { path = "../models" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
serde_json = "1"
