[package]
name = "openloom"
version.workspace = true
edition.workspace = true

[[bin]]
name = "openloom"
path = "src/main.rs"

[dependencies]
openloom-memory = { path = "../memory" }
openloom-models = { path = "../models" }
openloom-engine = { path = "../engine" }
openloom-server = { path = "../server" }
openloom-inference = { path = "../inference" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures = "0.3"
