[package]
name = "openloom-inference"
version.workspace = true
edition.workspace = true

[dependencies]
openloom-models = { path = "../models" }
llama-cpp-2 = { version = "=0.1.146", optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"

[features]
default = []
llama = ["llama-cpp-2"]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
