[package]
name = "openloom-inference"
version.workspace = true
edition.workspace = true

[dependencies]
openloom-models = { path = "../models" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"
