[package]
name = "openloom-memory"
version.workspace = true
edition.workspace = true

[dependencies]
refinery = { version = "0.8", features = ["rusqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
