[package]
name = "openloom-skills"
version.workspace = true
edition.workspace = true

[dependencies]
openloom-models = { path = "../models" }
openloom-sandbox = { path = "../sandbox" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
glob = "0.3"
regex = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["time", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
