[package]
name = "loom-context"
version = "0.3.22"
edition = "2024"
description = "Context window assembly for openLoom v2"

[dependencies]
loom-types = { path = "../loom-types" }
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.6"
sha2.workspace = true
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
