[package]
name = "loom-core"
version = "0.2.0"
edition = "2024"
description = "Agent orchestrator for openLoom v2 — AgentPool, agent loop, tool dispatch, event bus"

[dependencies]
loom-types = { path = "../loom-types" }
loom-inference = { path = "../loom-inference" }
lume-mcp = { path = "../lume-mcp" }
loom-memory = { path = "../loom-memory" }
loom-context = { path = "../loom-context" }
loom-security = { path = "../loom-security" }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
async-trait = "0.1"
tokio-util = "0.7"
