[package]
name = "loom-cron"
version = "0.1.0"
edition = "2024"
description = "Cron scheduler for openLoom v2 — SQLite-backed periodic task execution"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "process"] }
cron = "0.16"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
