[package]
name = "loom-import"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
loom-types = { path = "../loom-types" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
