[package]
name = "loom-inference"
version = "0.2.0"
edition = "2024"
description = "Inference engine for openLoom v2 — provider dispatch (Anthropic, OpenAI, DeepSeek, LM Studio, Ollama)"

[dependencies]
loom-types = { path = "../loom-types" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"
