[package]
name = "loom-security"
version = "0.2.16"
edition = "2024"
description = "Security layer for openLoom v2 — sandbox, approval, audit"

[dependencies]
loom-types = { path = "../loom-types" }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
