[package]
name = "loom-server"
version = "0.2.17"
edition = "2024"
description = "HTTP/WebSocket server for openLoom v2 — Axum routes, JSON-RPC dispatch, SSE"

[dependencies]
loom-types = { path = "../loom-types" }
loom-core = { path = "../loom-core" }
lume-mcp = { path = "../lume-mcp" }
lume-skills = { path = "../lume-skills" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
base64 = { workspace = true }
