[package]
name = "lume-lsp"
version = "0.2.17"
edition = "2024"
description = "LSP (Language Server Protocol) client for openLoom v2 — connect to language servers, run diagnostics, completions, hover, and more"

[dependencies]
loom-types = { path = "../loom-types" }
tokio = { version = "1", features = ["rt", "sync", "macros", "process", "time", "io-util"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
