[package]
name = "lume-marketplace"
version = "0.2.17"
edition = "2024"
description = "Plugin marketplace for openLoom — catalog, install, uninstall"

[dependencies]
lume-plugins = { path = "../lume-plugins" }
tokio = { version = "1", features = ["process"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { workspace = true, features = ["json"] }
dirs = "6"
toml = { workspace = true }
