[package]
name = "lume-mcp"
version = "0.2.16"
edition = "2024"
description = "MCP client for openLoom v2 — connect to MCP servers, list tools, call tools"

[dependencies]
loom-types = { path = "../loom-types" }
tokio = { version = "1", features = ["rt", "sync", "macros", "process", "time", "io-util"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
