[package]
name = "loom-app-server-client"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "loom_app_server_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
loom-app-server-protocol = { workspace = true }
loom-absolute-path = { workspace = true }
loom-arg0 = { workspace = true }
loom-config = { workspace = true }
loom-exec-server = { workspace = true }
loom-protocol = { workspace = true }
loom-rustls-provider = { workspace = true }
loom-tui-stubs = { workspace = true }
loom-uds = { workspace = true }
openloom-engine = { path = "../../engine" }
openloom-models = { path = "../../models" }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
